--- a/Y2S1/Macro/PSets/ps1/Pres/ps1_pres.tex
+++ b/Y2S1/Macro/PSets/ps1/Pres/ps1_pres.tex
@@ -15,7 +15,7 @@
 \title[Short Title]{Problem Set 1}
 \subtitle{Analysis of Labor Outcomes with PSID}
 \author[Your Name]{Tate Mason \\ \smallskip \texttt{Tate.Mason@uga.edu}}
-\institute[Your Univ.]{Munro Godfrey Sr. Department of Economics \\ University of Georgia}
+\institute[Your Univ.]{John Munro Godfrey Sr. Department of Economics \\ University of Georgia}
 \date{\today} % or custom date
 
 % Begin document
@@ -223,9 +223,11 @@
 
 \begin{frame}{Conclusion}
   \begin{itemize}
-    \item We see much of what we would expect in the data 
-    \item Hourly wage is not what I would expect 
-    \item Variance is massive, especially in wages 
+    \item Much of the behavior is what should be expected 
+    \item Labor force participation peaks around 55, income around 50, hours worked around 30, and wages around 40
+    \item Wages do not follow a typical concave pattern, likely due to data limitations
+    \item Education, industry, and wealth all have significant impacts on outcomes
+    \item Future work could explore more stratifications, as well as other outcome variables
   \end{itemize}
 \end{frame}
 
