finished introductions for health

--- a/Y2S1/Health/ResearchProject/Paper1/paper1.tex
+++ b/Y2S1/Health/ResearchProject/Paper1/paper1.tex
@@ -105,11 +105,15 @@ have influenced growth for pharmaceutical manufacturers would allow for insights
 
 \subsection{Problem Statement}
 \label{subsec:problem}
-This paper seeks to understand the effect of GLP-1 drugs on the consumption habits of individuals who were prescribed the drug
-for cosmetic reasons. Particularly, gaining an understanding of how consumption of goods like fast food, alcohol, or exercise 
-was altered upon receiving a prescription. Gaining this understanding would allow for an understanding of if the medicine helps
-to foster broader lifestyle changes, or is more akin to offsetting consumption of unhealthy food. While difficulties may arise in
-the differences in access by income, looking into this question would allow for valuable economic and policy insights.
+This paper seeks to understand how access to GLP-1 drugs alter consumption habits amongst users. By defining a lifetime consumption model over food,
+we would be able to understand how consumption of foods in various sectors varies with time on the medication. This is of interest since, given the 
+United States' known issues of obesity and weight related afflictions, understanding the effects of GLP-1 inhibitors could allow for policy insight
+such as federal funding initiatives to lower the barrier to access these prescriptions. Further, understanding the consumption behaviors of users 
+grants insight into the efficacy of these drugs. For instance, if a user were to alter lifestyle behaviors by switching food consumption to healthier
+alternatives, this would be valuable for lowering the future health risks associated with behavior like long term consumption of processed foods. If we
+see overall food consumption fall, this may be a problem behavior given the need for well rounded, calorically sufficient diets. Thus, these consumption
+patterns would grant a glimpse into potential health risks which are being implied by use of the drug.
+
 % Clearly articulate the specific problem or research question you're addressing. Be precise and focused.
 
 \subsection{Contributions}
@@ -173,34 +177,9 @@ the differences in access by income, looking into this question would allow for 
 \subsection{Experimental Setup}
 \label{subsec:setup}
 
-Describe your experimental methodology, including:
-\begin{itemize}
-    \item Datasets used
-    \item Evaluation metrics
-    \item Baseline methods
-    \item Implementation details
-    \item Hardware/software specifications
-\end{itemize}
 
 \subsection{Datasets}
 \label{subsec:datasets}
-
-Provide details about the datasets used in your evaluation.
-
-\begin{table}[htbp]
-\centering
-\caption{Dataset Statistics}
-\label{tab:datasets}
-\begin{tabular}{@{}lrrr@{}}
-\toprule
-Dataset & Training Samples & Test Samples & Features \\
-\midrule
-Dataset 1 & 10,000 & 2,500 & 784 \\
-Dataset 2 & 50,000 & 10,000 & 3,072 \\
-Dataset 3 & 1,000,000 & 100,000 & 128 \\
-\bottomrule
-\end{tabular}
-\end{table}
 
 \subsection{Results}
 \label{subsec:results}
@@ -261,7 +240,6 @@ Dataset 3 & 1,000,000 & 100,000 & 128 \\
 % Summarize your main contributions, key findings, and their significance.
 % Avoid simply repeating the abstract - provide a synthesis that reinforces your contributions.
 
-In this paper, we presented [brief summary of contribution]. Our experimental evaluation demonstrates [key findings]. The implications of this work include [broader impact]. Future research directions include [future work].
 
 \section*{Acknowledgments}
 
