--- a/Y2S1/Health/ResearchProject/Paper3/paper3.tex
+++ b/Y2S1/Health/ResearchProject/Paper3/paper3.tex
@@ -82,6 +82,12 @@ An Investigation into Addict Behavior and Policy Remedies}
 \section{Introduction}
 \label{sec:introduction}
 
+% Provide a broad introduction to your field and gradually narrow to your specific research question.
+% Motivate why this work is necessary and important.
+
+\subsection{Background and Motivation}
+\label{subsec:background}
+
 Over the last few decades, prescription drug abuse has become a significant and growing public health concern across the globe. The misuse of prescription drugs, specifially opioids, benzodiazepines, and stimulants, has led to the question of how to mitigate the practice of
 physician search. Physician search refers to the practice of patients seeking multiple doctors in the hope of "scoring" a presription to continue their addiction. While there are preventative measures in place, like registries of offenders, the practice persists. Coninciding
 with this question, it would be of great use to ascertain the incentive for physicians to enable the misuse of drugs, gaining a repeat source of revenue.
@@ -90,16 +96,22 @@ This paper seeks to understand the interplay of addicts and physician search, in
 incentives contrast in this case could help to implement policy which negates the opportunity for prescribers to mis-prescribe a sensitive drug. Finally, this paper will look to gain an insight into potential rehabilitation remedies which may help take the onus off both
 addicts and physicians.
 
-% Provide a broad introduction to your field and gradually narrow to your specific research question.
-% Motivate why this work is necessary and important.
 
-\subsection{Background and Motivation}
-\label{subsec:background}
 
 % Provide context for your research area. Explain why this problem is important and worth investigating.
 
 \subsection{Problem Statement}
 \label{subsec:problem}
+
+To ascertain the interplay between physician and addict behavior, it would be of interest to model physician WTP, in a sense, with their reputation. That is, how much risk are physicians willing to onboard
+for the profits associated with increased and repeat prescriptions? This would be interesting for many reasons, since physicians have many reasons to uphold their standing from liability, licensure, and even
+word of mouth advertisement. The last one may be increased as addicts see a pathway to drug access, but that would also increase liabilty and risk of loss of their licensure.
+
+For addicts, it is interesting to inquire about their search cost allocation, as well as habit based expenditure on health. Tolerance necessarily grows with prolonged use of drugs, thus modeling this sort
+of depletion of both search and health budgets is of interest to understand the impact on patients of finding a willing prescriber.prescriber
+
+From these two avenues, I think there is a worthwhile question to answer. That is, what is the risk threshold physicians will take on in exchange for profit as well as understanding time and health costs applied
+to addicts once they find a willing prescriber.
 
 % Clearly articulate the specific problem or research question you're addressing. Be precise and focused.
 
@@ -164,34 +176,9 @@ addicts and physicians.
 \subsection{Experimental Setup}
 \label{subsec:setup}
 
-Describe your experimental methodology, including:
-\begin{itemize}
-    \item Datasets used
-    \item Evaluation metrics
-    \item Baseline methods
-    \item Implementation details
-    \item Hardware/software specifications
-\end{itemize}
 
 \subsection{Datasets}
 \label{subsec:datasets}
-
-Provide details about the datasets used in your evaluation.
-
-\begin{table}[htbp]
-\centering
-\caption{Dataset Statistics}
-\label{tab:datasets}
-\begin{tabular}{@{}lrrr@{}}
-\toprule
-Dataset & Training Samples & Test Samples & Features \\
-\midrule
-Dataset 1 & 10,000 & 2,500 & 784 \\
-Dataset 2 & 50,000 & 10,000 & 3,072 \\
-Dataset 3 & 1,000,000 & 100,000 & 128 \\
-\bottomrule
-\end{tabular}
-\end{table}
 
 \subsection{Results}
 \label{subsec:results}
