--- a/Y2S1/Macro/ResProj/mason_proj.tex
+++ b/Y2S1/Macro/ResProj/mason_proj.tex
@@ -40,17 +40,19 @@
 \pagestyle{fancy}
 \fancyhf{}
 \rhead{\thepage}
-\lhead{\textit{placeholder}}
+\lhead{\textit{Location and Career Search}}
 \renewcommand{\headrulewidth}{0.4pt}
 
 % Title page information
-\title{placeholder - hotspot effect on immigrant lifetime wealth \\
-and labor outcomes}
+\title{Your Academic Paper Title: \\
+A Comprehensive Investigation}
 
 \author{
     Tate Mason\thanks{Tate.Mason@uga.edu} \\
-    \textit{University of Georgia} \\
+    \textit{John Munro Godfrey Sr. Department of Economics} \\
+    \textit{The University of Georgia} \\
     \textit{Athens, Georgia} \\
+    \\
 }
 
 \date{\today}
@@ -70,15 +72,19 @@ and labor outcomes}
 % Abstract
 \begin{abstract}
 \noindent % Write a concise summary (150-250 words) covering: research problem, methodology, key findings, and significance. State your main contributions clearly.
-As the world becomes increasingly connected, it is of import to analyze outcomes of immigrants. This paper seeks to understand the role of potential informal 
-networks on the labor and wealth outcomes of immigrants moving to what I term as "hotspot cities", cities in which their ethnic group makes up a significant 
-proportion of the population. Utilizing a dynamic equilibrium approach and leveraging extensive microdata, gaining an understanding of the effect of 
-the group on outcomes is plausible. Tracking households with datasets like IPUMS and ACS, as well as leveraging general trends with PSID, this research will
-parse out the effect of moving to a hotspot city versus moving elsewhere.
+
+I would like to do research into location search as a facet of optimal career search for young adults, modeling how the search cost to find an optimal landing spot at 
+what could be thought of as the building phase of life. More simply, I want to model where young adults migrate to and from, utilizing IPUMS or PSID data, to analyze how
+much investment in moving cost and how much risk they are willing to take on to find the location which provides the most optimal situation for lifetime earnings and employment
+outcomes. Particularly, I am most interested in migration to major metropolitan areas, and want to understand how much cost through either monetary cost of uprooting or the cost
+of uncertainty agents will invest to achieve their most desired outcome. This could be modeled with uncertainty surrounding employment, as is common, as well as uncertainty around
+future migration as in some of the work from James Kennan. Ideally, this work will analyze the trade off between early investment into migration versus end of life outcomes around
+wealth and earnings. The two primary questions are, first, how many moves are needed, on average, to find one's best place and, secondly, what are end of life returns to varying levels 
+of investment in moving?
 
 \vspace{0.3cm}
 \noindent \textbf{Keywords:} % List 3-6 keywords relevant to your research
-Wealth outcomes, immigration, informal networks
+Location search, career search, earnings outcomes, career outcomes.
 \end{abstract}
 
 \newpage
@@ -249,6 +255,8 @@ Dataset 3 & 1,000,000 & 100,000 & 128 \\
 
 % Summarize your main contributions, key findings, and their significance.
 % Avoid simply repeating the abstract - provide a synthesis that reinforces your contributions.
+
+In this paper, we presented [brief summary of contribution]. Our experimental evaluation demonstrates [key findings]. The implications of this work include [broader impact]. Future research directions include [future work].
 
 \section*{Acknowledgments}
 
